--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+.task{
+
+}
 .completed {
+  
   text-decoration: line-through;
+
+}
+button{
+  color: aliceblue;
+  background-color: black;
+  border-radius: 13%;
+cursor: pointer;
+}
+button:hover{
+  opacity: 0.5;
 }
